assets/styles/pages/_contact.scss
.form-section {
  input, textarea {
    width: 100%;
    padding: 1rem 1.5rem;
    box-sizing: border-box;
    outline: none;
    border: none;
    background: $alpha_25_primary_color;
    color: $primary_color;

    &::placeholder {
      color: $primary_color;
    }

    &:focus {
      outline: 5px solid $alpha_75_primary_color;
    }
  }

  button {
    padding: 1rem 3rem;
    border: none;
    outline: none;
    background: $primary_color;
    color: $light_color;
  }

  @media screen and (min-width: $lg) {
    width: 75%;
  }
}

.info-section {
  @media screen and (min-width: $lg) {
    width: 100%;
  }

  .info-container {
    background: #d16666;
    color: #FCFAE8;

    p {
      margin: 0;
    }

    @media screen and (min-width: $lg) {
      display: flex;
      justify-content: space-around;
      padding: 3rem !important;
      align-items: stretch;
      text-align: left;
    }
  }

  .map {
    height: 400px;
  }
}

